# wasm_runtimes_fuzzing

./: .dockerignore  .gitignore  Dockerfile  INTEGRATION.md  LICENSE  README.md
.github/workflows/: rust.yml
docs/: FUZZING_ENGINES.md  INSTALL.md  INTEGRATION.md  Internals.md  ROADMAP.md  WARF_SUBCOMMANDS.md  how_to_add_new_fuzz_target.md  how_to_analyze_a_crash.md  warf_advanced_options.md  warf_cli_tutorial.md
documentation/: INTEGRATION.md  ROADMAP.md  how_to_add_new_fuzz_target.md  warf_cli_tutorial.md
trophies/: SIGILL_wasm3.wasm  abort_wabt_reader_bad_alloc.wasm  alloc_failed_wain.wasm  assert_OnCallIndirectExpr_wabt.wasm  assert_OnReturnCallIndirectExpr_wabt.wasm  assert_failed_m3_compile_wasm3.wasm  assert_wasmtime_debug_simulated_dwarf.wasm  assert_wasmtime_table_type_anyref.wasm  global_buffer_overflow.wasm  hbo_Compile_BlockStatements_2169.wasm  hbo_export_wasm3.wasm  huge_cpu_usage_wasmprinter.wasm  mem_alloc_failed_wasmprinter.wasm  not_valid_wabt.wasm  null_deref_wasm3.wasm  oob_read_Read_f64.wasm  panic_oob_wasmer_clif.wasm  reject_leb128_wabt.wasm  segfault_binaryen_oob_read.wasm  uaf_ReadLebUnsigned_wasm3.wasm  unwrap_panic_wain.wasm
warf/: .dockerignore  Cargo.toml  Dockerfile  Makefile  cli.rs
warf/common/: Cargo.toml
warf/common/src/: lib.rs
warf/debug/: Cargo.toml  debug_template.rs
warf/dictionary/: wast.dict
warf/execute_all/: Cargo.toml  exec_all_template.rs
warf/fuzzer-afl/: Cargo.toml  template.rs
warf/fuzzer-honggfuzz/: Cargo.toml  template.rs
warf/fuzzer-libfuzzer/: Cargo.toml
warf/fuzzers/rust-afl/: Cargo.toml
warf/fuzzers/rust-honggfuzz/: Cargo.toml  template.rs
warf/fuzzers/rust-libfuzzer/: Cargo.toml  template.rs
warf/fuzzers/rust-libfuzzer/fuzz/: Cargo.toml
warf/fuzzing_workspace/corpora/wat/: fib.wat
warf/src/: debug.rs  env.rs  exec_all.rs  fuzzers.rs  main.rs  rust_fuzzers.rs  targets.rs
warf/targets/: Cargo.toml
warf/targets/src/: binaryen_ffi.rs  cranelift.rs  fizzy.rs  lib.rs  lightbeam.rs  parity_wasm.rs  wabt_ffi.rs  wain.rs  wasm3.rs  wasmer.rs  wasmi.rs  wasmparser.rs  wasmprinter.rs  wasmtime.rs  wast.rs  wat.rs
warf/workspace/corpora/wast/: add.wast
