[package]
name = "warf"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

[[bin]]
name = "warf"
path = "src/main.rs"

[dependencies]
structopt = "0.2.7"
clap = "2.33.0"
regex = "1.3.6"
failure = "0.1.7"
strsim = "0.10.0"
fs_extra = "1.1.0"
# fuzzers
afl = "0.8"
honggfuzz = "0.5"

[workspace]
exclude = [
  "targets",
  "debug",
  "fuzzer-afl",
  "fuzzer-honggfuzz",
  "fuzzer-libfuzzer",
  "workspace"
]
