[package]
name = "warf"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

[[bin]]
name = "warf"
path = "src/main.rs"

[dependencies]
structopt = "0.2.7"
clap = "2.33.0"
regex = "1.3.6"
failure = "0.1.7"
strsim = "0.10.0"
fs_extra = "1.1.0"
strum = "0.18.0"
strum_macros = "0.18.0"

[workspace]
exclude = [
  "targets",
  "execute_all",
  "debug",
  "fuzzers",
  "workspace"
]
