[package]
name = "fuzz-targets"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

[dependencies]
wasmi = "0.6"
wasmi-validation = "0.3"
parity-wasm = "0.41"
wasmer-runtime = "0.17"
wasmer-singlepass-backend = "0.17"
wasmtime = "0.17"
lightbeam = "0.17"
wasmparser = "0.57"
binaryen = "0.10"
wabt = "0.9"
wasmprinter = "0.2.5"
wain-validate = "0.1.4"
wain-syntax-binary = "0.1.3"
#wasm3 = "0.1.1"

